syntax="proto3";

package calc;
option go_package = "calcpb";

message  SumRequest {
    int32 first_number = 1;
    int32 second_number = 2;
}

message SumResponse {
    int32 sum_result = 1;
}

message PrimeNoDecompRequest {
    int64 number = 1;
}

message PrimeNoDecompResponse {
    int64 prime_factor=1;
    int64 power=2;
}

message  ComputeAverageRequest {
    int32 number = 1;
}

message ComputeAverageResponse {
    double average = 1;
}

service CalcSvc {
    //Unary
    rpc Sum(SumRequest) returns (SumResponse) {};

    //Stream Server
    rpc PrimeNoDecomp(PrimeNoDecompRequest) 
    returns (stream PrimeNoDecompResponse) {};

    //Stream Client

    rpc ComputeAverage (stream ComputeAverageRequest) returns (ComputeAverageResponse){};
}